<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Wave</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="details">Details</string>

    <string name="title_activity_settings">Settings</string>
    <string name="general">General</string>
    <string name="looks">Looks</string>
    <string name="now_playing">Now Playing</string>
    <string name="title_start_screen">Start Screen</string>
    <string name="summary_start_screen">The page that the app opens to</string>
    <string name="dialog_start_screen">Start Screen</string>
    <string name="title_theme">Theme</string>
    <string name="title_temp">Temp</string>
    <string name="summary_temp">Temp Summary</string>

    <string name="title_activity_image_preview">Art</string>
    <string name="share">Share</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="grid_palette">Grid: Palette</string>
    <string name="grid_card">Grid: Card</string>
    <string name="title_activity_grid">GridActivity</string>
    <string name="def">Default</string>
    <string name="about"><![CDATA[WV Music Player is a free material designed music player by <b>Droplit Studios</b>.]]></string>
    <string name="about_links"><![CDATA[&lt;a href=\"https://plus.google.com/+JulianPinzer/\">Google+&lt;/a>   &lt;a href=\"https://twitter.com/Droplit_\">Twitter&lt;/a>]]></string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="libraries">Libraries</string>
    <string name="title_activity_intro">WV</string>
    <string name="action_about">About</string>
    <string name="title_activity_home">Wave</string>
    <string name="view_as">View As</string>
    <string name="title_activity_details">Details</string>

    <!-- Page titles -->
    <string name="page_recent">Recent</string>
    <string name="page_artists">Artists</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_genres">Genres</string>

    <!-- Option menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_shuffle">Shuffle all</string>
    <string name="menu_play_all">Play all</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_shop">Shop for themes</string>
    <string name="menu_clear_recents">Clear recent</string>
    <string name="menu_clear_queue">Clear queue</string>
    <string name="menu_save_queue">Save queue</string>
    <string name="menu_clear_favorites">Clear Favorites</string>
    <string name="menu_share">Share</string>
    <string name="menu_save_lyrics">Save lyrics</string>
    <string name="menu_remove_lyrics">Delete lyrics</string>
    <string name="menu_download_lyrics">Fetch lyrics</string>
    <string name="menu_add_to_homescreen">Place on Home screen</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="menu_simple">Simple</string>
    <string name="menu_detailed">Detailed</string>
    <string name="menu_grid">Grid</string>
    <string name="menu_view_as">View as</string>

    <!-- Playlist items -->
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_quickplay">Pin to Quickplay</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove_from_recent">Remove from recent</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="remove_from_quickplay">Remove from Quickplay</string>

    <!-- Sort orders -->
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>

    <!-- Default playlist names -->
    <string name="playlist_favorites">Favorites</string>
    <string name="playlist_last_added">Last added</string>

    <!-- AlertDialog items -->
    <string name="sort_order_title">Sort by</string>
    <string name="new_playlist">New playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="create_playlist_prompt" msgid="942607395076646686">"Playlist name"</string>
    <string name="cannot_be_undone">This cannot be undone</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="new_photo">Choose photo from Gallery</string>
    <string name="google_search">Google search</string>
    <string name="use_default">Use default photo</string>
    <string name="old_photo">Use old photo</string>

    <!-- Context menu items -->
    <string name="context_menu_play_selection">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_rename_playlist">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_fetch_album_art">Fetch album art</string>
    <string name="context_menu_fetch_artist_image">Fetch artist image</string>
    <string name="context_menu_open_in_play_store">Open in Play Store</string>
    <string name="context_menu_remove_from_recent">Remove from recent</string>
    <string name="context_menu_remove_from_queue">Remove from queue</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>

    <!-- Content descriptions -->
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="accessibility_add_to_favorites">Add to favorites</string>
    <string name="accessibility_remove_from_favorites">Remove from favorites</string>

    <!-- Toast messages -->
    <string name="removed_from_favorites">removed from Favorites</string>
    <string name="removed_from_recent">removed from recent</string>
    <string name="removed_from_playlist">removed from playlist</string>
    <string name="added_to_favorites">added to Favorites</string>
    <string name="pinned_to_home_screen">pinned to your Home screen</string>
    <string name="could_not_be_pinned_to_home_screen">could not be pinned to your Home screen</string>
    <string name="set_as_ringtone">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as ringtone</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="theme_set">set as the theme</string>
    <string name="lyrics_saved">lyrics saved</string>
    <string name="lyrics_deleted">lyrics deleted</string>

    <!-- Settings -->
    <string name="settings_ui_category">Interface</string>
    <string name="settings_storage_category">Storage</string>
    <string name="settings_data_category">Data</string>
    <string name="settings_about_category">About</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_about_apollo">About Apollo</string>
    <string name="settings_special_thanks">Special thanks</string>
    <string name="settings_cyanogenmod_title">CyanogenMod</string>
    <string name="settings_self_title">Andrew Neal</string>
    <string name="settings_lopez_title">A.J. Lopez</string>
    <string name="settings_lopez_summary">Icon and Play Store banner design</string>
    <string name="settings_color_scheme_title">Choose Apollo\'s default color scheme</string>
    <string name="settings_color_scheme_summary">Changes the accent color in Apollo</string>
    <string name="settings_theme_chooser_title">Theme chooser</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="settings_download_only_on_wifi_title">Download via Wi-Fi only</string>
    <string name="settings_download_only_on_wifi_summary">To reduce carrier charges, don\'t download over mobile networks</string>
    <string name="settings_download_missing_artwork_title">Download missing album art</string>
    <string name="settings_download_artist_images_title">Download missing artist images</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_use_lockscreen_controls">Use lockscreen controls</string>
    <string name="settings_version_title">Version number</string>

    <!-- Share Intent -->
    <string name="now_listening_to">#NowPlaying</string>
    <string name="by">by</string>
    <string name="share_track_using">Share track using:</string>
    <string name="hash_apollo">#Apollo</string>

    <!-- ColorPicker -->
    <string name="color_picker_title">Color scheme</string>
    <string name="hex">#</string>
    <string name="current_color">Current</string>
    <string name="new_color">New</string>

    <!-- App widget -->
    <string name="app_widget_small">Apollo: 4x1</string>
    <string name="app_widget_large">Apollo: 4x2</string>
    <string name="app_widget_large_alt">Apollo: 4x2 (Alternate)</string>
    <string name="app_widget_recent">Apollo: Recently listened</string>
    <string name="app_widget_text_separator">-</string>

    <!-- What keywords to use when shopping for Apollo themes -->
    <string name="apollo_themes_shop_key">Apollo Themes</string>

    <!-- Empty list / error messages -->
    <string name="no_effects_for_you">The equalizer could not be opened.</string>
    <string name="empty_music">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_last_added">Songs you\'ve added over the last month will be shown here.</string>
    <string name="empty_search">No search results found</string>
    <string name="empty_favorite">Songs you mark as favorites will be shown here.</string>
    <string name="empty_recent">Albums you\'ve listened to will show up here. Try playing some music.</string>
    <string name="no_lyrics">Lyrics for \"<xliff:g id="name">%s</xliff:g>\" could not be found</string>
    <string name="try_fetch_lyrics">To fetch lyrics for \"<xliff:g id="name">%s</xliff:g>\" use \"Fetch lyrics\" in the menu.</string>


</resources>
