<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general">

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_start_screen"
            android:summary="@string/summary_start_screen"
            android:entries="@array/entries_start_screen"
            android:entryValues="@array/entryvalues_start_screen"
            android:dialogTitle="@string/dialog_start_screen" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/looks">

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_theme"
            android:entries="@array/entries_theme_general"
            android:entryValues="@array/entryvalues_theme_general"
            android:dialogTitle="@string/title_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/now_playing">

            <CheckBoxPreference
                android:key="checkbox_preferences"
                android:title="@string/title_temp"
                android:summary="@string/summary_temp" />

    </PreferenceCategory>


</PreferenceScreen>